# lumen-1

./: .gitignore  task.md
lumen-1/: INTEGRATION_GUIDE.md  README.md  playground.html  pyproject.toml  task.md  walkthrough.md
lumen-1/configs/: dpo.yaml  lumen-1b.yaml  lumen-3b.yaml  lumen-7b.yaml  pretrain_multimodal.yaml  pretrain_text.yaml  safety.yaml  safety_tune.yaml  security.yaml  sft.yaml  vllm_model_config.json
lumen-1/dashboard/: app.py
lumen-1/dashboard/static/: index.html  main.js  style.css
lumen-1/data/: sft.jsonl
lumen-1/docs/: ARCHITECTURE.md  MODEL_CARD.md  dashboard_user_guide.md
lumen-1/eval_data/: gsm8k.jsonl  mmlu.jsonl  toxigen.jsonl  truthfulqa.jsonl
lumen-1/lumen/: __init__.py
lumen-1/lumen/data/: __init__.py  blender.py  dataset.py  filters.py
lumen-1/lumen/eval/: __init__.py  harness.py
lumen-1/lumen/inference/: __init__.py  agent.py  engine.py  export.py  quantize.py  speculative.py  tools.py
lumen-1/lumen/model/: __init__.py  attention.py  audio_encoder.py  config.py  decoder.py  lumen_model.py  (+5 more)
lumen-1/notebooks/: Colab_Training_Guide.md
lumen-1/scripts/: align.py  colab_csv_processor.py  convert_gguf.py  distill.py  engine.py  evaluate.py  export_model.py  generate_sft_from_json.py  launch_pretrain.sh  preprocess_data.py  pretrain.py  quantize.py  rag_setup.py  run_agent.py  run_cpp_engine.bat  speculative.py  train_mistral_fast.py  train_tokenizer.py  video_pipeline.py
lumen-1/tests/: __init__.py  test_model.py  test_tools.py
lumen-1/tokenizer/: lumen_tokenizer.model  lumen_tokenizer.vocab  tokenizer_config.json
(+55 files in other folders)
