[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumen-1"
version = "0.1.0"
description = "Lumen-1: Local-first multimodal foundation model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "sentencepiece>=0.2.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "safetensors>=0.4.0",
    "datasets>=2.18.0",
    "pyarrow>=14.0.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "einops>=0.7.0",
    "pillow>=10.0.0",
    "librosa>=0.10.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
train = [
    "wandb>=0.16.0",
    "peft>=0.9.0",
    "bitsandbytes>=0.42.0",
    "trl>=0.7.11",
]
eval = [
    "lm-eval>=0.4.0",
]
inference = [
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.2.0",
]
data = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lumen*"]

[tool.ruff]
line-length = 100
target-version = "py310"
